<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#696969"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startRecord"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:text="@string/timeFormat"
        android:id="@+id/tv_recordTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/bt_record"
        app:layout_constraintBottom_toBottomOf="@id/bt_record"/>

    <Button
        android:id="@+id/bt_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_record" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:max="100"
        app:layout_constraintTop_toBottomOf="@+id/bt_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_playTime"
        android:text="@string/timeFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_duration"
        android:text="@string/timeFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/bt_openBluetoothMic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openBluetoothMic"
        android:layout_marginVertical="25dp"
        app:layout_constraintTop_toBottomOf="@id/tv_playTime"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/tip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_openBluetoothMic" />

</androidx.constraintlayout.widget.ConstraintLayout>